# json-yaml-difference-generator

./: .gitignore  Makefile  README.md  README.mdy  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
gendiff/: __init__.py  args_parser.py  generate_diff.py  logic_gendiff.py
gendiff/formatters/: bool_to_str.py  get_format.py  json.py  plain.py  stylish.py
gendiff/help_tools/: convert_files_to_python.py  data_parser.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: file1.yml  file2.yml  result_json.txt
