[tool.poetry]
name = "json-yaml-difference-generator"
version = "0.1.0"
description = "Difference Generator is a tool that determines the difference between two two files (JSON and/or YAML )"
authors = ["KsyushaKI <oksanaakadem39@gmail.com>"]
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pyyaml = "^6.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
